tests/compile-fail/compile_fail__type_error__stackless__non_void_expr_statement.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:7
   │
27 │       3.0;  
   │       ^^^ a float
   │
   = expression statements must be of void type


